fixed name not appearing on past medication name , removing white spaces

--- a/src/widgets/medications/medication-level-two.css
+++ b/src/widgets/medications/medication-level-two.css
@@ -56,3 +56,7 @@
 .medicationFooter {
   text-align: center;
 }
+
+.medicationStatus {
+  position: absolute;
+}
